# platepyProject

./: MANIFEST.in  Pipfile  README.md  setup.cfg
src/platepy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
