[metadata]
name = platepy
version = 0.0.3
author = Tobia Diggelmann
author_email = tobiadig@gmail.com
description = Create and compute plate models with FEM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiadig/platepyProject
project_urls =
    Bug Tracker = https://github.com/tobiadig/platepyProject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src