[metadata]
name = platepy
version = 1.0.1
author = Tobia Diggelmann
author_email = tobiadig@gmail.com
description = Create and compute plate models using FEM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiadig/platepyProject
project_urls =
    Documentation = https://tobiadig.github.io/
    Source Code = https://github.com/tobiadig/platepy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True


[options.packages.find]
where = src